--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
   <body>
     <h1>My Headline</h1>
     <p>Using a paragraph tag, and inside that, I am <strong>bolding</strong> some text.</p>
+    <div id=“paragraphs”>
+    <p>This is my first paragraph.</p>
+    <p>This is my second paragraph.</p>
+    <p>This is my final paragraph.</p>    
+</div>
   </body>
 </html>
