created page for assignment

--- a/index.html
+++ b/index.html
@@ -6,11 +6,15 @@
   </head>
   <body>
     <h1>My Headline</h1>
-    <p>Using a paragraph tag, and inside that, I am <strong>bolding</strong> some text.</p>
-    <div id=“paragraphs”>
-    <p>This is my first paragraph.</p>
-    <p>This is my second paragraph.</p>
-    <p>This is my final paragraph.</p>    
+    <p>Using a paragraph tag, and inside that, I am <strong>bolding</strong> some text. Oh and also <em>putting some text in italics.</em></p>
+    <div id="list">
+      A list of items.
+      <ul>
+        <li>The first item in the list <a href = "www.google.com">with this link to Google.</a></li>
+        <li>Another item on the list <a href = "www.yahoo.com">with this link to Yahoo.</a></li>
+        <li>One more item on the list <a href = "www.aol.com">with this link to AOL.</a></li>
+        <li>The <span id = "special">last</span> item on the list</li>
+      </ul>   
 </div>
   </body>
 </html>
