fixed links - made them absolute

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <div id="list">
       A list of items.
       <ul>
-        <li>The first item in the list <a href = "www.google.com">with this link to Google.</a></li>
-        <li>Another item on the list <a href = "www.yahoo.com">with this link to Yahoo.</a></li>
-        <li>One more item on the list <a href = "www.aol.com">with this link to AOL.</a></li>
+        <li>The first item in the list <a href = "https://www.google.com">with this link to Google.</a></li>
+        <li>Another item on the list <a href = "https://www.yahoo.com">with this link to Yahoo.</a></li>
+        <li>One more item on the list <a href = "https://www.aol.com">with this link to AOL.</a></li>
         <li>The <span id = "special">last</span> item on the list</li>
       </ul>   
 </div>
