changed to css assigment- renamed old index to index2

--- a/index.html
+++ b/index.html
@@ -1,20 +1,34 @@
 <!DOCTYPE html>
-<html lang = "en">
-  <head>
-    <title> ... Stan Golanka 752c32 ... </title>
-    <meta charset="UTF-8">
-  </head>
-  <body>
-    <h1>My Headline</h1>
-    <p>Using a paragraph tag, and inside that, I am <strong>bolding</strong> some text. Oh and also <em>putting some text in italics.</em></p>
-    <div id="list">
-      A list of items.
-      <ul>
-        <li>The first item in the list <a href = "https://www.google.com">with this link to Google.</a></li>
-        <li>Another item on the list <a href = "https://www.yahoo.com">with this link to Yahoo.</a></li>
-        <li>One more item on the list <a href = "https://www.aol.com">with this link to AOL.</a></li>
-        <li>The <span id = "special">last</span> item on the list</li>
-      </ul>   
+<html>
+<head>
+  <title>Blocks</title>
+  <!-- Do not change this file - add your CSS styling 
+       rules to the blocks.css file included below -->
+  <link type="text/css" rel="stylesheet" href="blocks.css">
+</head>
+<body>
+<div id="one">
+Turns out you have a really fun time if you 
+go to work every day and focus on being 
+silly and funny and happy! - Hannah Murray
 </div>
-  </body>
+<div id="two">
+All you need in this life is ignorance and confidence, 
+and then success is sure. - Mark Twain
+</div>
+<div id="three">
+Well, if crime fighters fight crime and fire fighters 
+fight fire, what do freedom fighters fight? They never 
+mention that part to us, do they? - George Carlin
+</div>
+<div id="four">
+Great minds discuss ideas; average minds discuss events;
+small minds discuss people. - Eleanor Roosevelt
+</div>
+<p id="link">
+<a href="https://www.brainyquote.com/" target="_blank">
+Brainy Quote
+</a>
+</p>
+</body>
 </html>
